fix(ux): hover flicker on cluster instances (#5738)

--- a/app/scripts/modules/core/src/cluster/rollups.less
+++ b/app/scripts/modules/core/src/cluster/rollups.less
@@ -120,11 +120,8 @@ table.instances {
     &:hover,
     &.active,
     &.highlighted {
-      height: @instance-height - 1;
-      margin-top: 0;
-      margin-bottom: 1px;
-      border: 1px solid var(--color-mineshaft);
-      box-shadow: 0 0 3px 1px var(--color-concrete);
+      border: none;
+      box-shadow: 0 0 3px 1px var(--color-concrete), inset 0 0 0 1px var(--color-mineshaft);
       z-index: 2;
     }
 
